# egb-lang

./: .clang-format  .gitignore  .gitignore.bak  CMakeLists.txt  README.md  TODO.md  build.py  build_server.py  comment_test.txt  debug_session.rdbg  main_mod  syntax.md  test.txt  tree_precedence.txt
.github/workflows/: cmake.yml  cmake_linux_x86.yml  cmake_windows_x86.yml  linux-clang-x86.yml  linux-gcc-x86.yml  linux_gcc_x86.yml  msvc-x86.yml  msvc2019-x86.yml  msvc2022-x86.yml  msvc_x86.yml
fuzz/: CMakeLists.txt  another_crash  another_crash_variant  crash-975732fd9967d351103bf4a2643db482f2598a4b  seed.vpr
include/: ast_bin_expr.h  ast_double.h  ast_function.h  ast_global_block.h  ast_integer.h  ast_node.h  ast_number.h  ast_variable.h  cmake_config.h  cmake_config.h.in  cmd_options.h  data_type.h  lexer.h  parser.h  t_vals.h  tok_val_pair.h
src/: CMakeLists.txt  CMakeLists.txt.bak  ast_bin_expr.cpp  ast_double.cpp  ast_function.cpp  ast_integer.cpp  ast_number.cpp  ast_variable.cpp  cmd_options.cpp  dummy_codegen.cpp  fuzz_main.cpp  lexer.cpp  main.cpp  parser.cpp  parser.cpp.bak  unit_test.cpp.old
test/: CMakeLists.txt  LexCharInStringTest.cpp  LexCommentTest.cpp  LexNumberTest.cpp  LexParenthesisTest.cpp  LexStringToDoubleTest.cpp  LexStringToNumberTest.cpp  NumberTest.cpp  ParseExpressionTest.cpp  demo.el  demo.vpr  test_cmd_options.cpp  test_codegen.cpp  test_parse_expression.cpp
test/toolchain/: dummy.vpr  main.c
tools/: dummy_codegen.cpp  format  format.ps1  format.py
